--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ analysis/auth_info.txt
 *.zip
 *.png
 analysis/1_checksubjects/*
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU.csv
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU.xlsx
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU_cleaned.csv
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU_cleaned.xlsx
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/subIDs_afterNov15.csv
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/subject_log_sept2020.csv
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/db_check_0713.xlsx
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/correct_matches.csv
+analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subID_check.Rmd
+analysis/step1_get_drawings/THU_Drawings/~$db_check_0713.xlsx
