add new metadata

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,24 @@ analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/db_ch
 analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/correct_matches.csv
 analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subID_check.Rmd
 analysis/step1_get_drawings/THU_Drawings/~$db_check_0713.xlsx
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1000_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_100_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1100_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1200_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1300_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1400_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1500_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1600_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1700_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1800_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_1900_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_200_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_300_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_400_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_500_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_600_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_700_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_800_images_CDM_photodraw_e2_start_0.csv
+analysis/step1_get_drawings/CDM_Drawings/photodraw2/photodraw2_descriptives/Photodraw2_AllDescriptives_900_images_CDM_photodraw_e2_start_0.csv
+data/CDM/drawings/data_3_2020/photodraw2_descriptives/Photodraw2_SRCD_cleaned_data_4-8.csv
+data/CDM/drawings/data_3_2020/photodraw2_descriptives/Photodraw2_1619_images_metadata.csv
