--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ analysis/auth_info.txt
 analysis/_main_analyses_only_cdm_srcd/*
 analysis/_photodraw_pilot/*
 analysis/1_checksubjects/*\
-
+# ignore all old drawings and descriptives
+analysis/step1_get_drawings/THU_Drawings/1_download_sketches/_old_rendered_drawings/*
+analysis/step1_get_drawings/THU_Drawings/1_download_sketches/.ipynb_checkpoints/*
+analysis/step1_get_drawings/THU_Drawings/1_download_sketches/_dev/*
 
 analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU.csv
 analysis/step1_get_drawings/THU_Drawings/2_subject_log_checks/subject_logs/KIDDRW_THU.xlsx
