--- a/experiments/Recognition_ratings/experiment/package.json
+++ b/experiments/Recognition_ratings/experiment/package.json
@@ -13,7 +13,7 @@
     "package.json": "^2.0.1",
     "paper": "^0.11.5",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0",
+    "socket.io": "2.0.4",
     "xmldom": "^0.1.31",
     "xmlhttprequest": "^1.8.0"
   },
