--- a/experiments/Recognition_ratings/experiment/package.json
+++ b/experiments/Recognition_ratings/experiment/package.json
@@ -5,17 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.3.2",
-    "express": "^4.16.2",
-    "lodash": "^4.17.20",
-    "minimist": "^1.2.5",
-    "mongodb": "^3.1.4",
-    "nodemailer": "^4.7.0",
+    "express": "4.16.2",
+    "lodash": "4.17.4",
+    "minimist": "1.2.0",
+    "mongodb": "3.0.3",
+    "nodemailer": "4.4.2",
     "package.json": "^2.0.1",
-    "paper": "^0.11.5",
-    "request": "^2.88.2",
+    "request": "2.83.0",
     "socket.io": "2.0.4",
-    "xmldom": "^0.1.31",
-    "xmlhttprequest": "^1.8.0"
+    "xmldom": "0.1.27",
+    "xmlhttprequest": "1.8.0"
   },
   "devDependencies": {},
   "scripts": {
