add tracing rendering and analysis scripts, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,8 @@ experiments/0_photodraw_pilot/code/node_modules/paper/dist/paperjs.zip
 experiments/0_photodraw_pilot/code/node_modules.zip
 experiments/0_photodraw_pilot/code/images.zip
 data/compiled/drawings/object_drawings.zip
+analysis/step4b_download_recognition_data/.ipynb_checkpoints/read_data_from_mongodb-checkpoint.ipynb
+analysis/step5_tracing_evaluation/step1_render_highres_tracings/.ipynb_checkpoints/calculate_shape_spatial-devphotodraw-checkpoint.ipynb
+analysis/step5_tracing_evaluation/step1_render_highres_tracings/.ipynb_checkpoints/pull_tracing_svg_400x400-checkpoint.ipynb
+analysis/step4b_download_recognition_data/csv_out/Devphotodraw_recognition_pilot.csv
+analysis/step5_tracing_evaluation/step1_render_highres_tracings/.ipynb_checkpoints/thu_couchdb_pull_tracing_svg_400x400-checkpoint.ipynb
