updated main analysis script

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ analysis/step4b_download_recognition_data/csv_out/batch3_production_june2021.csv
 analysis/step4b_download_recognition_data/csv_out/batch4_production_june2021.csv
 data/compiled/compiled_classifications/Classification_Outputs2161.csv
 analysis/step4_get_features_and_classifications/2_run_classsificatinos/count_classification_outputs.nb.html
+analysis/step4_get_features_and_classifications/2_run_classsificatinos/count_classification_outputs.nb.html
+analysis/step4_get_features_and_classifications/2_run_classsificatinos/count_classification_outputs.nb.html
