--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ analysis/step3_check_classifications/CDM_Drawings/metadata/.METADATA_kid.csv.icl
 analysis/step3_check_classifications/CDM_Drawings/compiled_classifications/.Classification_Outputs1092.csv.icloud
 analysis/step3_check_classifications/CDM_Drawings/.examine_photodraw_classifications.Rmd.icloud
 analysis/step1_get_drawings/CDM_Drawings/photodraw2/.descriptives_check.Rmd.icloud
+analysis/step5_tracing_evaluation/step1_render_highres_tracings/render_drawings.ipynb
