--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ analysis/auth_info.txt
 #  ignore old scripts
 analysis/_main_analyses_only_cdm_srcd/*
 analysis/_photodraw_pilot/*
+node_modules/
 
 analysis/step1_get_drawings/CDM_Drawings/photodraw2/_old/*
 
