updates to revision .rmd

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ analysis/step4_get_features_and_classifications/1_extract_features/clip_embeddin
 writing/.trackdown/Manuscript_2023.Rmd-chunk_info.rds
 writing/.trackdown/Manuscript_2023.Rmd-header_info.rds
 writing/_old_exploratory_for_revision.Rmd
+writing/Manuscript_2023_redable.docx
+writing/Manuscript_2023.docx
